Working on MAAG

--- a/research/maag-2019/index.html
+++ b/research/maag-2019/index.html
@@ -671,7 +671,8 @@ title: DAG decomposition
                 $\longrightarrow$
             </td>
             <td>
-                Root system polytopes
+                Root system<br> 
+                polytopes
             </td>
         </tr>
     </table>
@@ -685,6 +686,34 @@ title: DAG decomposition
         Delucchi & Hoessly
         <span class="emph gray"> 2019 </span>
     </p>
+</section>
+<section>
+    <div class="theorem">
+        <h4>Theorem</h4>
+        <p>
+
+        </p>
+    </div>
+    <div class="theorem">
+        <h4>Theorem</h4>
+        <p>
+
+        </p>
+    </div>
+</section>
+<section>
+    <table>
+        <tr class="fragment">
+            <td>Volume</td>
+            <td>$\longrightarrow$</td>
+            <td>Root count</td>
+        </tr>
+        <tr class="fragment">
+            <td>Facets</td>
+            <td>$\longrightarrow$</td>
+            <td>Subnetworks</td>
+        </tr>
+    </table>
 </section>
 <section>
     <h3>Directed edges</h3>
