--- a/research/maag-2019/index.html
+++ b/research/maag-2019/index.html
@@ -646,7 +646,7 @@ title: DAG decomposition
             <span class="footnote">"Unmixing the mixed volume computation"</span>
         </li>
         <li>
-            B. Frederic & I. Soprunov 
+            F. Bihan & I. Soprunov 
             <span class="footnote">
                 "Criteria for Strict Monotonicity of the Mixed Volume of Convex Polytopes"
             </span>
