updated matlab lecture

--- a/teaching/matlab/lectures/conditional.html
+++ b/teaching/matlab/lectures/conditional.html
@@ -113,3 +113,14 @@ title: Conditional statements
     </ul>
     <img src="../marilyn-twotone.jpg" alt="" width="400">
 </section>
+<section>
+    <h3>More exercises</h3>
+    <p>Can you recreate this image using "for" and "if"?</p>
+    <img src="../marilyn-half.jpg" alt="" width="400">
+</section>
+<section>
+    <h3>More exercises</h3>
+    <p>What about this?</p>
+    <img src="../marilyn-circle.jpg" alt="" width="400">
+</section>
+
