Updating Matlab lecture

--- a/teaching/matlab/lectures/loops.html
+++ b/teaching/matlab/lectures/loops.html
@@ -95,3 +95,7 @@ title: Matrices and arrays
         <li>Create the gradient effect on this image</li>
     </ul>
 </section>
+<section>
+    <h3>Can you recreat this?</h3>
+    <img src="../marilyn-gradient.png" alt="" width="400">
+</section>
