--- a/teaching/matlab/lectures/multidim.html
+++ b/teaching/matlab/lectures/multidim.html
@@ -1,33 +1,23 @@
 ---
 layout: slide
-title: Matrices and arrays
+title: Multidimensional arrays
 ---
 
 <section>
 
-    <H1>Working with arrays</H1>
-</section>
-<section>
-    <h3>Review questions</h3>
-    <ul>
-        <li class="fragment">What is an array?</li>
-        <li class="fragment">If <code>A</code> is an array, what is <code>A(3,4)</code>?</li>
-        <li class="fragment">If <code>A</code> is an array, how to access its third row?</li>
-    </ul>
+    <H1>Multidimensional arrays</H1>
+
 </section>
 <section>
     <h3>Arrays</h3>
-    <p>We already studied the concept of arrays/matrices.</p>
+    <p>In MATLAB, arrays are classified according to their "dimensions".</p>
     <ul>
-        <li class="fragment">Arrays are the fundamental representation of data.</li>
-        <li class="fragment">Arrays can contain numerical data and data of other types, but we cannot mix data types in a single array directly.</li>
-        <li class="fragment">Arrays can organize multidimensional data.</li>
-        <li class="fragment">The size of an array can be changed dynamically.</li>
-        <li class="fragment">Indices for arrays are "1-based".</li>
-    </ul>
+        <li class="fragment">A vector is a 1-dimensional array.</li>
+        <li class="fragment">A matrix is a 2-dimensional array.</li>
+        <li class="fragment">A multidimensional array is an array with more than two dimensions.</li>
+        <li class="fragment">Dimension can also be changed dynamically.</li>
 </section>
 <section>
-    <h3>Creating arrays</h3>
     <p>
         A 1-dimensional array can be created by listing the entries within a pair of square brackets:
     </p>
