--- a/research/kuramoto/kap/editor.html
+++ b/research/kuramoto/kap/editor.html
@@ -4,26 +4,42 @@
   <head>
     <meta charset="utf-8">
     <title>Directed Graph Editor</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
     <link rel="stylesheet" href="app.css">
   </head>
 
   <body>
-    <div id="parent">
-      <div>
-        <button type="button" onclick="onCompute()">Compute</button>
+    <div id="container">
+      <div class="row">
+        <div class="column">
+          <h2>Kuramoto Adjacency Polytope Computation</h2>
+        </div>
       </div>
-      <div>
-        <svg id="netedit" width=400 height=400></svg>
-
+      <div class="row">
+        <div class="column column-25">
+          <label for="apiname" class="label-inline">Decomposition</label>
+          <select id="apiname">
+            <option value="fnets">Facet decomposition</option>
+            <option value="contract">Edge contraction</option>
+          </select>
+          <button type="button" onclick="onCompute()">Compute</button>
+        </div>
+        <div class="column column-75">
+          <svg id="netedit" width=400 height=400></svg>
+        </div>
       </div>
-      <div>
-        <select id="netlist" size=20 style="width: 120px" onchange="onSelectNet(value)">
-        </select>
-        <br>
-        <textarea id="netdesc" cols="30" rows="10"></textarea>
-      </div>
-      <div>
-        <svg id="netview" width=400 height=400></svg>
+      <div class="row">
+        <div class="column column-25">
+          <select id="netlist" onchange="onSelectNet(value)">
+          </select>
+          <br>
+          <textarea id="netdesc" cols="30" rows="10"></textarea>
+        </div>
+        <div class="column column-75">
+          <svg id="netview" width=400 height=400></svg>
+        </div>
       </div>
     </div>
   </body>
