--- a/research/kuramoto/kap/editor.html
+++ b/research/kuramoto/kap/editor.html
@@ -4,10 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>Directed Graph Editor</title>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
-    <link rel="stylesheet" href="app.css">
+    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"> -->
+    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css"> -->
+    <link rel="stylesheet" href="/css/mini-default.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
@@ -18,26 +20,43 @@
         </div>
       </div>
       <div class="row">
-        <div class="column column-25">
-          <label for="apiname" class="label-inline">Decomposition</label>
+        <div class="col-sm-4">
+          <label for="apiname">Decomposition</label>
           <select id="apiname">
             <option value="fnets">Facet decomposition</option>
             <option value="contract">Edge contraction</option>
           </select>
           <button type="button" onclick="onCompute()">Compute</button>
         </div>
-        <div class="column column-75">
+        <div class="col-sm-8">
           <svg id="netedit" width=400 height=400></svg>
         </div>
       </div>
       <div class="row">
-        <div class="column column-25">
-          <select id="netlist" onchange="onSelectNet(value)">
-          </select>
-          <br>
-          <textarea id="netdesc" cols="30" rows="10"></textarea>
+        <div class="col-sm-4">
+          <table class="striped" id="netlist">
+            <caption>Subnetworks</caption>
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Size</th>
+                <th>Volume</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr> -->
+            </tbody>
+          </table>
+          <!-- <select id="netlist" onchange="onSelectNet(value)">
+          </select> -->
+          <!-- <br> -->
+          <textarea id="netdesc"></textarea>
         </div>
-        <div class="column column-75">
+        <div class="col-sm-8">
           <svg id="netview" width=400 height=400></svg>
         </div>
       </div>
